kubernetes/reddit/comment-deployment.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: comment
  labels:
    app: reddit
    component: comment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reddit
      component: comment
  template:
    metadata:
     name: comment
     labels:
       app: reddit
       component: comment
    spec:
      containers:
      - image: verty/comment
        name: comment
