kubernetes/reddit/comment-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: comment
  labels:
      app: reddit
      component: post
spec:
  ports:
  - port: 9292
    protocol: TCP
    targetPort: 9292
  selector:
    app: reddit
    component: comment
