kubernetes/reddit/ui-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: ui
   annotations:
     kubernetes.io/ingress.allow-http: "false"  
spec:
   tls:
   - secretName: ui-ingress  
   backend:
       serviceName: ui
       servicePort: 9292
